# responsiveness-bench

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REFERENCES.bib  pyproject.toml
.bootstrap/: part-00  part-01  part-02  part-03  part-04  part-05
.github/workflows/: bootstrap-v02.yml  ci.yml
data/: seed.jsonl
data/seed/: backed-challenge.jsonl  bilayer-full.jsonl  bilayer-partial.jsonl  channel-content.jsonl  direct-denial.jsonl  entailment-counterassertion.jsonl  evidence-request.jsonl  irrelevant-counterassert.jsonl  matched-scope-qualification.jsonl  posture-occurrence.jsonl  qualified-admission.jsonl
docs/: annotation-guide.md  method-note.md  naturalistic-corpus.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md
src/responsiveness_bench/: __init__.py  agreement.py  audit.py  cli.py  codec.py  evaluation.py  inference.py  invariance.py  model.py  protocol.py  scoring.py
src/responsiveness_bench/protocol_assets/: inference-few-shot-v1.txt  inference-output.schema.json  inference-zero-shot-v1.txt
tests/: test_agreement.py  test_audit.py  test_codec_cli.py  test_evaluation.py  test_inference.py  test_invariance.py  test_protocol.py  test_repository_hygiene.py  test_scoring.py  test_seed_corpus.py  test_structural_twins.py
