[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "responsiveness-bench"
version = "0.1.0"
description = "A valence-blind benchmark for claim-response responsiveness"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Stephen T. Schweizer"}]

[project.scripts]
responsiveness-bench = "responsiveness_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
